--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<h2 class="headline headline--subtitle">Hazte el Corte de pelo y la barba al mismo tiempo.</h2>
 
 		<div class="btn--top">
-			<a href="https://www.facebook.com/" target="_blank">Reservar cita online</a>
+			<a href="https://api.whatsapp.com/send?phone=+51932298542&text=Quiero%20informacion%20de%20precio%20" target="_blank">Reservar cita online</a>
 		</div>
 
 	</div>
